--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@
     font-size: 30px;
     line-height: 37px;
     color: #95E1D3;
+    transition: 0.8s;
 }
 
 .box__logo:hover {
-    transition: 0.8s;
     color: #F38181;
 }
 
@@ -48,6 +48,39 @@
     font-size: 17px;
     line-height: 17px;
     color: #95E1D3;
+    position: relative;
+}
+
+.nav__link::before {
+    position: absolute;
+    content: '';
+    width: 0%;
+    height: 0%;
+    left: -5px;
+    bottom: 0px;
+    background-color: #ae4fda;
+    transition: 0.4s;
+}
+
+.nav__link:hover::before {
+    width: 5%;
+    height: 100%;
+}
+
+.nav__link::after {
+    position: absolute;
+    content: '';
+    width: 0%;
+    height: 0%;
+    right: -5px;
+    top: 0px;
+    background-color: aqua;
+    transition: 0.4s;
+}
+
+.nav__link:hover::after {
+    width: 5%;
+    height: 100%;
 }
 
 .nav__box {
@@ -119,6 +152,7 @@
     height: 4px;
     background: #F38181;
     margin: 0 auto;
+    transition: 1.5s;
 }
 
 .benefits {
@@ -133,6 +167,28 @@
 .benefits__item {
     display: flex;
     cursor: pointer;
+    position: relative;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    padding: 10px;
+}
+
+.benefits__item::before {
+    position: absolute;
+    content: '';
+    width: 0%;
+    height: 100%;
+    background-color: #384163;
+    left: 0;
+    top: 0;
+    transition: 0.7s;
+    z-index: -1;
+    border-radius: 10px;
+}
+
+.benefits__item:hover::before {
+    width: 100%;
+    height: 100%;
 }
 
 .item__alarm {
@@ -178,16 +234,19 @@
 
 .info__block-2 {
     width: 1104px;
-    height: 221px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+}
+
+.info__block-2 .block__title {
+    margin-top: 100px;
 }
 
 .info__block-2:hover .block__line {
     width: 1100px;
-    transition: 1.5s;
 }
 
 .block__info {
@@ -211,18 +270,144 @@
 
 .box__man {
     padding: 0 15px;
+    position: relative;
 }
 
 .man__picture {
     width: 380px;
     height: 470px;
     cursor: pointer;
+    transition: 0.7s;
+    position: relative;
+    background-image: url(./Image/OIP\ \(1\).jpg);
+    background-size: cover;
 }
 
 .man__picture:hover {
-    width: 400px;
-    height: 490px;
-    transition: 0.8s;
+    width: 450px;
+    height: 540px;
+}
+
+.man__picture-2 {
+    width: 380px;
+    height: 470px;
+    cursor: pointer;
+    transition: 0.7s;
+    position: relative;
+    background-image: url(./Image/Volume7.jpg);
+    background-size: cover;
+}
+
+.man__picture-2:hover {
+    width: 450px;
+    height: 540px;
+}
+
+.man__picture-3 {
+    width: 380px;
+    height: 470px;
+    cursor: pointer;
+    transition: 0.7s;
+    position: relative;
+    background-image: url(./Image/OIP.jpg);
+    background-size: cover;
+}
+
+.man__picture-3:hover {
+    width: 450px;
+    height: 540px;
+}
+
+.box__man:hover .man__picture {
+    width: 450px;
+    height: 540px;
+}
+
+.box__man:hover .man__picture-2 {
+    width: 450px;
+    height: 540px;
+}
+
+.box__man:hover .man__picture-3 {
+    width: 450px;
+    height: 540px;
+}
+
+.box__man:hover .box__inside {
+    width: 450px;
+    height: 540px;
+}
+
+.box__man:hover .box__inside-2 {
+    width: 450px;
+    height: 540px;
+}
+
+.box__man:hover .box__inside-3 {
+    width: 450px;
+    height: 540px;
+}
+
+.box__inside {
+    position: absolute;
+    width: 380px;
+    height: 470px;
+    top: -10px;
+    left: 5px;
+    background: linear-gradient(#322420c6, #e7ac64c3);
+    opacity: 0;
+    transition: 0.7s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box__inside-2 {
+    position: absolute;
+    width: 380px;
+    height: 470px;
+    top: -10px;
+    left: 5px;
+    background: linear-gradient(#cac8c8d1, #b885e1d7);
+    opacity: 0;
+    transition: 0.7s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box__man:hover .box__inside-2 {
+    opacity: 1;
+}
+
+.box__inside-3 {
+    position: absolute;
+    width: 380px;
+    height: 470px;
+    top: -10px;
+    left: 5px;
+    background: linear-gradient(#2b231dbe, #bbbabcd9);
+    opacity: 0;
+    transition: 0.7s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box__man:hover .box__inside-3 {
+    opacity: 1;
+}
+
+.box__man:hover .box__inside {
+    opacity: 1;
+}
+
+.inside__link {
+    margin: 0 10px;
+}
+
+.inside__link img:hover {
+    filter: drop-shadow(0 0 10px #ed6c26);
 }
 
 .box__title {
